--- a/src/main/resources/templates/clients/listeclients.html
+++ b/src/main/resources/templates/clients/listeclients.html
@@ -10,6 +10,8 @@
 -->
 
 <body>
+	<header th:replace="fragments/header :: tagheader"></header>
+
 	<h1 th:text="#{listeclients.titre}">HOME</h1>
 
 
